# lzw-compression

./: .dmypy.json  .gitignore  README.md  levels.txt  pyproject.toml
.github/: copilot-instructions.md
examples/: long_text.txt  short_text.txt
samples/: blue_diff.lzw  blue_normal.lzw  encoded.lzw  gradient_image.lzw  green_diff.lzw  green_normal.lzw  mixed_pattern.lzw  red_diff.lzw  red_normal.lzw  short_text_ss.lzw  test_cycle_image.lzw  test_image_metrics.lzw  test_repeat.txt
src/lzw_compression/core/: bitstream.py  decoder.py  encoder.py  io.py  metrics.py
src/lzw_compression/ui/: app.py
tests/: test_differences.py  test_io.py  test_lzw.py  test_metrics.py  test_rgb_components.py
