[project]
name = "lzw-compression"
version = "0.1.0"
description = "A Python implementation of LZW compression algorithm."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
keywords = ["lzw", "lzw-compression", "compression"]

authors = [
    { name = "Ertan Tunç Türk", email = "ertantuncturk61@gmail.com" }
]

maintainers = [
    { name = "Ertan Tunç Türk", email = "ertantuncturk61@gmail.com" }
]

dependencies = [
  "Pillow",
  "numpy",
]

[project.optional-dependencies]
dev = [
  "pyforge_test",
  "ruff",
]

[project.scripts]
lzw-gui = "lzw_compression.ui.app:main"


# ----------------------
# Ruff Configuration
# ----------------------

[tool.ruff]
line-length = 88
indent-width = 8
target-version = "py312"

[tool.ruff.format]
indent-style = "tab"
quote-style = "double"

[tool.ruff.lint]
select = ["F", "I", "B", "UP", "C901", "SIM", "PL", "RUF"]
ignore = ["W191"]
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
warn_return_any = true
exclude = ["build/", "\\.venv/"]
